--- a/pages/events.html
+++ b/pages/events.html
@@ -41,11 +41,11 @@
             <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">Events</a>
             <div class="dropdown-menu">
-              <li><a class="dropdown-item" href="events.html">Event 1</a></li>
+              <li><a class="dropdown-item" href="pages/events.html">Event 1</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="events.html">Event 2</a></li>
+              <li><a class="dropdown-item" href="pages/events.html">Event 2</a></li>
             </div>
             <a class="nav-link" href="https://instagram.com/backroads_app?igshid=YmMyMTA2M2Y=">
               <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-instagram"
