Commit 4: Testing why images wont be grabbed

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="col-4"></div>
               <div class="col-4 ">
                 <div class="row d-flex flex-row align-items-center">
-                  <img src="assets/230x0w (2).webp" class="col-8" height="500px">
+                  <img src="../assets/230x0w (2).webp" class="col-8" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
