Commit 5: Still Testing Images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BackRoads - Home</title>
 
-  <link rel="icon" href="/assets/logo.png">
+  <link rel="icon" href="../assets/logo.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,7 +128,7 @@
 
         <h1 class="display-3 text-light p-4 m-5">Our App</h1>
         <div class="d-flex justify-content-center">
-          <img class="shadow-lg"  src="/assets/AppWelcome.png" height="500px" width="250px">
+          <img class="shadow-lg"  src="../assets/AppWelcome.png" height="500px" width="250px">
         </div>
         
 
