--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BackRoads - Home</title>
 
-  <link rel="icon" href="../assets/logo.png">
+  <link rel="icon" href="assets/logo.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +72,7 @@
 
     <div class="col-12 gifBanner h-50">
 
-      <img class="customimg-fluid" src="/assets/drift-cars.gif">
+      <img class="customimg-fluid" src="assets/drift-cars.gif">
 
     </div>
 
@@ -128,7 +128,7 @@
 
         <h1 class="display-3 text-light p-4 m-5">Our App</h1>
         <div class="d-flex justify-content-center">
-          <img class="shadow-lg"  src="../assets/AppWelcome.png" height="500px" width="250px">
+          <img class="shadow-lg"  src="assets/AppWelcome.png" height="500px" width="250px">
         </div>
         
 
@@ -191,7 +191,7 @@
               <div class="col-4"></div>
               <div class="col-4 ">
                 <div class="row d-flex flex-row align-items-center">
-                  <img src="../assets/230x0w (2).webp" class="col-8" height="500px">
+                  <img src="assets/230x0w (2).webp" class="col-8" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
