Commit 6: Next Push

--- a/index.html
+++ b/index.html
@@ -69,13 +69,9 @@
 
     <div class="container-fluid">
     </div class="row">
-
     <div class="col-12 gifBanner h-50">
-
       <img class="customimg-fluid" src="assets/drift-cars.gif">
-
     </div>
-
     </div>
 
     <!-- Marketing messaging and featurettes
@@ -86,15 +82,12 @@
 
       <div class="container-fluid">
 
-        <div class="p-3 bg-light rounded-3">
-          <div class="container-fluid py-5 my-5 text-purple">
-            <h1 class="display-5 fw-bold">WHAT WE BELIEVE IN</h1>
-            <p class="col-md-8 fs-4">It is Backroads mission to bring together like-minded people, and to invest in the
-              drivers’ experience, and tight-knit communities</p>
-          </div>
+        <div class="px-2 py-5 bg-light rounded-3 my-5 text-purple">
+          <h1 class="display-5 fw-bold">WHAT WE BELIEVE IN</h1>
+          <p class="fs-4">It is Backroads mission to bring together like-minded people, and to invest in thedrivers’ experience, and tight-knit communities</p>
         </div>
 
-        <div class="row align-items-md-stretch py-5 mb-4">
+        <div class="row align-items-md-stretch gy-5">
 
           <div class="col-md-6">
             <div class="h-100 p-5 text-white rounded-3 bg-purple">
@@ -104,6 +97,7 @@
                 Backroads was made for people who enjoy driving.</p>
             </div>
           </div>
+
 
           <div class="col-md-6">
             <div class="h-100 p-5 bg-light border rounded-3 text-purple">
@@ -128,9 +122,9 @@
 
         <h1 class="display-3 text-light p-4 m-5">Our App</h1>
         <div class="d-flex justify-content-center">
-          <img class="shadow-lg"  src="assets/AppWelcome.png" height="500px" width="250px">
+          <img class="shadow-lg" src="assets/AppWelcome.png" height="500px" width="250px">
         </div>
-        
+
 
         <div class="container-fluid p-4">
           <h2 class="display-5 text-light text-start mt-4 p-5">How it works</h2>
@@ -164,8 +158,8 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4">
-                <div class="row d-flex flex-row align-items-center">
-                  <img src="assets/230x0w (1).webp" class="col-8 " height="500px">
+                <div class="row d-flex justify-content-sm-center align-items-center">
+                  <img src="assets/230x0w (1).webp" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -177,8 +171,8 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4 ">
-                <div class="row d-flex flex-row align-items-center">
-                  <img src="assets/230x0w.webp" class="col-8" height="500px">
+                <div class="row d-flex justify-content-sm-center  align-items-center">
+                  <img src="assets/230x0w.webp" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -190,8 +184,8 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4 ">
-                <div class="row d-flex flex-row align-items-center">
-                  <img src="assets/230x0w (2).webp" class="col-8" height="500px">
+                <div class="row d-flex justify-content-sm-center align-items-center">
+                  <img src="assets/230x0w (2).webp" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -203,8 +197,8 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4 ">
-                <div class="row d-flex flex-row align-items-center">
-                  <img src="assets/230x0w (3).webp" class="col-8" height="500px">
+                <div class="row d-flex justify-content-sm-center  align-items-center">
+                  <img src="assets/230x0w (3).webp" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -235,7 +229,7 @@
           <!--Features Section-->
           <div class="row text-light mt-5 ">
 
-            <div class="col-4 p-4">
+            <div class="col-sm-12 col-md-4  p-4">
               <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-map"
                 viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
@@ -249,7 +243,7 @@
                 Ipsum harum hic, animi suscipit amet nobis ea nisi quibusdam in maiores eligendi!</p>
             </div>
 
-            <div class="col-4 p-4">
+            <div class="col-sm-12 col-md-4  p-4">
 
               <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                 class="bi bi-broadcast-pin" viewBox="0 0 16 16">
@@ -264,7 +258,7 @@
                 Ipsum harum hic, animi suscipit amet nobis ea nisi quibusdam in maiores eligendi!</p>
             </div>
 
-            <div class="col-4 p-4">
+            <div class="col-sm-12 col-md-4 p-4">
               <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                 class="bi bi-people-fill" viewBox="0 0 16 16">
                 <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
@@ -287,9 +281,9 @@
     </div>
 
     <!-- /END THE FEATURETTES -->
-    <div class="container-fluid p-5">
+    <div class="container-fluid p-4">
 
-      <div class="row  m-2 p-3 bg-light border border-purple border-3 rounded-3">
+      <div class="row m-2 p-4 bg-light border border-purple border-3 rounded-3">
 
         <!--notice how when the screen is smaller it snaps down-->
 
