Commit 13: Backroads Test

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="col-4"></div>
               <div class="col-4">
                 <div class="row d-flex justify-content-sm-center align-items-center">
-                  <img src="assets/230x0w (1).webp" class="col-8 carousel-img" height="500px">
+                  <img src="assets/app_1.png" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -173,7 +173,7 @@
               <div class="col-4"></div>
               <div class="col-4 ">
                 <div class="row d-flex justify-content-sm-center  align-items-center">
-                  <img src="assets/230x0w.webp" class="col-8 carousel-img" height="500px">
+                  <img src="assets/app_2.png" class="col-8 carousel-img" height="500px" width="200px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -186,7 +186,7 @@
               <div class="col-4"></div>
               <div class="col-4 ">
                 <div class="row d-flex justify-content-sm-center align-items-center">
-                  <img src="assets/230x0w (2).webp" class="col-8 carousel-img" height="500px">
+                  <img src="assets/app_3.png" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -199,7 +199,7 @@
               <div class="col-4"></div>
               <div class="col-4 ">
                 <div class="row d-flex justify-content-sm-center  align-items-center">
-                  <img src="assets/230x0w (3).webp" class="col-8 carousel-img" height="500px">
+                  <img src="assets/app_4.png" class="col-8 carousel-img" height="500px">
                   <h3 class="col-4">Sample Screen Shot</h3>
                 </div>
               </div>
@@ -338,7 +338,7 @@
   </footer>
 
 
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 
 </body>
 
