--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           <div class="nav navbar-nav navContent fs-5">
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="#contactInfo">Contact Us</a>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"aria-expanded="false">Events</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">Events</a>
             <div class="dropdown-menu">
               <li><a class="dropdown-item" href="pages/events.html">Event 1</a></li>
               <li>
@@ -53,7 +54,7 @@
                   d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
               </svg>
             </a>
-            
+
             <!--AppStore Link-->
             <a class="nav-link" href="https://apps.apple.com/ca/app/backroads-app/id1585201410">
               <button type="button" class="btn btn-outline-light">Download on IOS</button>
@@ -71,7 +72,10 @@
     <div class="container-fluid">
     </div class="row">
     <div class="col-12 gifBanner h-50">
-      <img  src="assets/drift-cars.gif" width="100%" height="600px">
+
+      <video class="animatedBanner" width="100%" autoplay loop>
+        <source src="assets/pexels-kelly-lacy-5669768.mp4" type="video/mp4">
+      </video>
     </div>
     </div>
 
@@ -85,7 +89,8 @@
 
         <div class="px-2 py-5 bg-light rounded-3 my-5 text-purple">
           <h1 class="display-5 fw-bold">WHAT WE BELIEVE IN</h1>
-          <p class="fs-4">It is Backroads mission to bring together like-minded people, and to invest in thedrivers’ experience, and tight-knit communities</p>
+          <p class="fs-4">It is Backroads mission to bring together like-minded people, and to invest in thedrivers’
+            experience, and tight-knit communities</p>
         </div>
 
         <div class="row align-items-md-stretch gy-5">
@@ -153,16 +158,19 @@
           <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
 
-        <div class="carousel-inner ">
+        <div class="carousel-inner">
 
           <div class="carousel-item active">
             <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-md-4 col-sm-12 d-flex justify-content-center fs-3 mb-4">Example Screen Shot</div>
+              <div class="col-md-4"></div>
+            </div>
+
+            <div class="row">
               <div class="col-4"></div>
-              <div class="col-4">
-                <div class="row d-flex justify-content-sm-center align-items-center">
-                  <img src="assets/app_1.png" class="col-8 carousel-img" height="500px">
-                  <h3 class="col-4">Sample Screen Shot</h3>
-                </div>
+              <div class="col-4 d-flex justify-content-center">
+                <img src="assets/app_1.png" class="carousel-img" height="700px">
               </div>
               <div class="col-4"></div>
             </div>
@@ -170,12 +178,15 @@
 
           <div class="carousel-item">
             <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-md-4 col-sm-12 d-flex justify-content-center fs-3">Example Screen Shot</div>
+              <div class="col-md-4"></div>
+            </div>
+
+            <div class="row">
               <div class="col-4"></div>
-              <div class="col-4 ">
-                <div class="row d-flex justify-content-sm-center  align-items-center">
-                  <img src="assets/app_2.png" class="col-8 carousel-img" height="500px" width="200px">
-                  <h3 class="col-4">Sample Screen Shot</h3>
-                </div>
+              <div class="col-4 d-flex justify-content-center">
+                <img src="assets/app_2.png" class="carousel-img" height="700px">
               </div>
               <div class="col-4"></div>
             </div>
@@ -183,12 +194,15 @@
 
           <div class="carousel-item">
             <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-md-4 col-sm-12 d-flex justify-content-center fs-3">Example Screen Shot</div>
+              <div class="col-md-4"></div>
+            </div>
+
+            <div class="row">
               <div class="col-4"></div>
-              <div class="col-4 ">
-                <div class="row d-flex justify-content-sm-center align-items-center">
-                  <img src="assets/app_3.png" class="col-8 carousel-img" height="500px">
-                  <h3 class="col-4">Sample Screen Shot</h3>
-                </div>
+              <div class="col-4 d-flex justify-content-center">
+                <img src="assets/app_3.png" class="carousel-img" height="700px">
               </div>
               <div class="col-4"></div>
             </div>
@@ -196,16 +210,22 @@
 
           <div class="carousel-item">
             <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-md-4 col-sm-12 d-flex justify-content-center fs-3">Example Screen Shot</div>
+              <div class="col-md-4"></div>
+            </div>
+
+            <div class="row">
               <div class="col-4"></div>
-              <div class="col-4 ">
-                <div class="row d-flex justify-content-sm-center  align-items-center">
-                  <img src="assets/app_4.png" class="col-8 carousel-img" height="500px">
-                  <h3 class="col-4">Sample Screen Shot</h3>
-                </div>
+              <div class="col-4 d-flex justify-content-center">
+                <img src="assets/app_4.png" class="carousel-img" height="700px">
               </div>
               <div class="col-4"></div>
             </div>
           </div>
+
+          
+
 
         </div>
 
@@ -338,7 +358,7 @@
   </footer>
 
 
-<script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
