--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div class="row">
     <div class="col-12 gifBanner h-50">
 
-      <video class="animatedBanner" width="100%" autoplay loop>
+      <video id="animatedBanner" width="100%" autoplay loop muted>
         <source src="assets/pexels-kelly-lacy-5669768.mp4" type="video/mp4">
       </video>
     </div>
@@ -224,7 +224,7 @@
             </div>
           </div>
 
-          
+
 
 
         </div>
