Commit 17: next banner test

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div class="row">
     <div class="col-12 gifBanner h-50">
 
+      <!--Note: This Feature is "CPU" intensive check Task Manager to verify this if you must :)-->
       <video id="animatedBanner" width="100%" autoplay loop muted>
         <source src="assets/pexels-kelly-lacy-5669768.mp4" type="video/mp4">
       </video>
@@ -97,7 +98,12 @@
 
           <div class="col-md-6">
             <div class="h-100 p-5 text-white rounded-3 bg-purple">
-              <h2>Who We Are</h2>
+              <h2>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                  <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816zM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275zM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"/>
+                </svg>
+                Who We Are
+              </h2>
               <p>A mapping application for car enthusiasts, Backroads enables users to find scenic routes, organize and
                 join rallies with other drivers, and make friends with other drivers who have the same passion.
                 Backroads was made for people who enjoy driving.</p>
@@ -107,7 +113,12 @@
 
           <div class="col-md-6">
             <div class="h-100 p-5 bg-light border rounded-3 text-purple">
-              <h2>Our Passion</h2>
+              <h2>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+                  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+                Our Passion
+              </h2>
               <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure
                 to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both
                 column's content for equal-height.</p>
@@ -314,7 +325,7 @@
             <h2 id="contactInfo">Contact Information</h2>
             <p>Email: jlr@backroadscarclub.com</p>
             <p>Phone: ‍647-534-3547</p>
-            <p>Developer Email: jordan.bhar@hotmail.com</p>
+            
             <p>Toronto, Ontario</p>
           </div>
 
@@ -353,7 +364,9 @@
     <p class="float-end text-light">| <a class="text-light" href="#">Back to top</a> |</p>
     <p class="text-light">&copy; | 2020–2022 Back Roads Inc. | &middot; <a class="text-light" href="#">Privacy</a>
       &middot;
-      <a class="text-light" href="#">Terms</a> |
+      <a class="text-light" href="#">Terms</a> | 
+    <p class="float-end text-light"><p class="fs-XSSS text-light">Developer Email: jordan.bhar@hotmail.com</p></p>
+      
     </p>
   </footer>
 
