cOMMIT 20: ANOTHER TEST

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="col-12 gifBanner h-50">
 
       <!--Note: This Feature is "CPU" intensive check Task Manager to verify this if you must :)-->
-      <video id="animatedBanner" width="100%" autoplay loop>
+      <video id="animatedBanner" width="100%" autoplay loop muted>
         <source src="assets/pexels-kelly-lacy-5669768.mp4" type="video/mp4">
       </video>
     </div>
