--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
     <div class="col-12 gifBanner h-50">
 
       <!--Note: This Feature is "CPU" intensive check Task Manager to verify this if you must :)-->
-      <video id="animatedBanner" width="100%" autoplay="autoplay" loop muted>
+      <video id="animatedBanner" width="100%" autoplay="autoplay" loop muted webkit-playsinline playsinline>
         <source src="assets/pexels-kelly-lacy-5669768.mp4" type="video/mp4">
       </video>
+      <div class="position-absolute top-50 start-50 translate-middle">
+        <p class="text-light display-1">BackRoad Cars Club</p>
+      </div>
+      
     </div>
     </div>
 
