--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="menu-bar  shadow-lg ">
       <nav class="navbar navbar-dark navbar-expand-lg">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.png" class="mx-md-5" width="110" height="100">
+          <img src="assets/logo.png" class="mx-md-5 navbar-shrink" width="110" height="100">
         </a>
         <!--this button appears when the page is to small, puts into a collapsable button-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
