--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
 
   <div id="navTransparent" class="position-fixed container-fluid header ">
-    <div class="menu-bar  shadow-lg ">
+    <div class="menu-bar  s ">
       <nav class="navbar navbar-dark navbar-expand-lg">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/logo.png" class="mx-md-5 navbar-shrink" width="110" height="100">
+          <img id="navbar-brandimg" src="assets/logo.png" class="mx-md-5" width="110" height="100">
         </a>
         <!--this button appears when the page is to small, puts into a collapsable button-->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
